# state_estimation

./: CMakeLists.txt  readme.md  run.sh
app/: lg_kf_app.cpp
data/: kf_result.csv
include/: lg_kf.hpp
source/: lg_kf.cpp
tools/: opengl.cpp
visual/: show_state_line.py
